# agentic-graph-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py
.github/workflows/: ci.yml
agentic_graph_rag/: service.py  tool_policy.py  trace_store.py
agentic_graph_rag/agent/: retrieval_agent.py  router.py  tools.py
agentic_graph_rag/generation/: graph_verifier.py
agentic_graph_rag/indexing/: dual_node.py  skeleton.py
agentic_graph_rag/optimization/: cache.py  monitor.py
agentic_graph_rag/reasoning/: __init__.py  neo4j_bridge.py  reasoning_engine.py
agentic_graph_rag/retrieval/: vector_cypher.py
api/: __init__.py  app.py  deps.py  mcp_server.py  middleware.py  routes.py
benchmark/: compare.py  questions.json  results.json  results_q27_test.json  results_v10_doc2.json  results_v10_full.json  results_v11_full.json  results_v12_run.json  results_v2.json  results_v4.json  results_v5.json  results_v5_stability.json  results_v6.json  results_v7_dual.json  results_v8_hybrid_fix.json  results_v9_cosine_hybrid.json  runner.py
data/: sample_graph_rag.txt
docs/: HABR_ARTICLE.md  MEDIUM_ARTICLE_EN.md  MEDIUM_ARTICLE_RU.md  MEDIUM_ARTICLE_RU_S.md  PORTFOLIO_ANALYSIS.md
docs/plans/: 2026-02-14-agentic-graph-rag-design.md  2026-02-14-agentic-graph-rag-implementation.md  2026-02-15-pymangle-design.md  2026-02-15-pymangle-implementation.md  2026-02-17-v6-provenance-api-design.md  2026-02-17-v6-provenance-api-implementation.md
pymangle/: pyproject.toml
pymangle/pymangle/: __init__.py  analysis.py  ast_nodes.py  builtins.py  engine.py  external.py  factstore.py  grammar.lark  parser.py  temporal.py  types.py  unifier.py
pymangle/tests/: test_aggregation.py  test_analysis.py  test_builtins.py  test_engine.py  test_external.py  test_factstore.py  test_grammar.py  test_parser.py  test_temporal.py  test_types.py  test_unifier.py
scripts/: debug_global_q27.py  ingest.py  run_benchmark_v10.py  run_benchmark_v10_doc2.py  run_benchmark_v10_full.py  run_benchmark_v11_global.py  run_benchmark_v12.py  run_benchmark_v9.py  run_q27_test.py
tests/: test_benchmark.py  test_benchmark_mangle.py  test_cache.py  test_dual_node.py  test_graph_verifier.py  test_monitor.py  test_reasoning_access.py  test_reasoning_bridge.py  test_reasoning_routing.py  test_reasoning_ui.py  test_retrieval_agent.py  test_router.py  test_router_mangle.py  test_skeleton.py  test_tools.py  test_vector_cypher.py
tests/unit/: test_api_routes.py  test_generator_tokens.py  test_mcp_tools.py  test_middleware.py  test_pipeline_service.py  test_provenance_collection.py  test_provenance_models.py  test_tool_policy.py  test_trace_store.py
ui/: streamlit_app.py
(+3 files in other folders)
